<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="team1100.scouting2017.tabFragments.InfoFragment"
    android:orientation="vertical">

    <CheckBox
        android:id="@+id/no_show_box"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".5"
        android:textSize="11pt"
        android:textColor="#000000"
        android:text="@string/no_show_label"/>
    <CheckBox
        android:id="@+id/broken_box"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".5"
        android:textSize="11pt"
        android:textColor="#000000"
        android:text="@string/broken_label"/>
    <CheckBox
        android:id="@+id/disabled_box"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".5"
        android:textSize="11pt"
        android:textColor="#000000"
        android:text="@string/disabled_label"/>
    <CheckBox
        android:id="@+id/penalty_box"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".5"
        android:textSize="11pt"
        android:textColor="#000000"
        android:text="@string/foul_label"/>
    <CheckBox
        android:id="@+id/pilot_box"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".5"
        android:textSize="11pt"
        android:textColor="#000000"
        android:text="@string/pilot_label"/>

</LinearLayout>
