<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="team1100.scouting2017.tabFragments.TeleopFragment">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".5"
        android:textSize="11pt"
        android:textColor="#000000"
        android:text="@string/fuel_high_label"/>
    <NumberPicker
        android:id="@+id/high_tele_picker"
        android:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        >
    </NumberPicker>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".5"
        android:textSize="11pt"
        android:textColor="#000000"
        android:text="@string/fuel_low_label"/>
    <NumberPicker
        android:id="@+id/low_tele_picker"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:inputType="number"
        ></NumberPicker>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".5"
        android:textSize="11pt"
        android:textColor="#000000"
        android:text="@string/gear_tele_label"/>
    <NumberPicker
        android:id="@+id/gear_tele_picker"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:inputType="number"
        android:layout_weight="1"
        ></NumberPicker>
    <CheckBox
        android:id="@+id/climb_box"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/climb_label"
        android:textSize="11pt"
        android:textColor="@android:color/black"/>


</LinearLayout>
