<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="team1100.scouting2017.MenuItems.Settings"
    android:orientation="vertical">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_button_label"
        android:textAllCaps="false"
        android:textSize="15pt"
        android:onClick="deleteData"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/team_list_label"
        android:textAllCaps="false"
        android:textSize="15pt"
        android:onClick="setTeamList"/>
    <View
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"/>
   <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/event_settings_label"
        android:textAllCaps="false"
        android:textSize="15pt"
        android:onClick="selectEvent"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

</LinearLayout>
